--- a/.gitignore
+++ b/.gitignore
@@ -326,3 +326,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/django,python,macos,windows
 
 settings.ini
+secrets.json
